Friend表新增avatar列，用户模块，商城模块全面实现Redis缓存，减少数据库查询压力